--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MovieKitaBisa</string>
+    <string name="navBottomTvShow">Tv Shows</string>
+    <string name="popular">Popular</string>
+    <string name="categori">Category</string>
 </resources>
