add review detail bottomsheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="navBottomTvShow">Tv Shows</string>
     <string name="popular">Popular</string>
     <string name="categori">Category</string>
+    <string name="Reviewer">Reviewer</string>
 </resources>
